Adds support for preview images for publications (#730)
* Adds support for publication teaser

* Adds an example for publication teaser

* Update example publication teaser

* Update size

* change `teaser` to `preview`

* Update _config.yml

Co-authored-by: Maruan <alshedivat@users.noreply.github.com>

* Update _layouts/bib.html

Co-authored-by: Maruan <alshedivat@users.noreply.github.com>

* Update _layouts/bib.html

Co-authored-by: Maruan <alshedivat@users.noreply.github.com>

* Update _layouts/bib.html

Co-authored-by: Maruan <alshedivat@users.noreply.github.com>

* Update _sass/_base.scss

Co-authored-by: Maruan <alshedivat@users.noreply.github.com>

* Update _sass/_base.scss

Co-authored-by: Maruan <alshedivat@users.noreply.github.com>

Co-authored-by: Maruan <alshedivat@users.noreply.github.com>

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,8 @@
   title={Investigations on the Theory of the Brownian Movement},
   author={Einstein, Albert},
   year={1956},
-  publisher={Courier Corporation,}
+  publisher={Courier Corporation,},
+  preview={brownian-motion.gif},
 }
 
 @article{einstein1950meaning,
