Adds support `max_author_limit` (#732)
* Adds support max author limit

* typo

* fix

* display all authors by default

* Added an example

* Added 'and' before the last author

* Improve hiding/showing more authors

* Add title text

Co-authored-by: Maruan Al-Shedivat <maruan@genesistherapeutics.ai>
Co-authored-by: Maruan <alshedivat@users.noreply.github.com>

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -71,3 +71,11 @@
   author={Einstein, A.},
   year={1905}
 }
+
+@book{przibram1967letters,
+  bibtex_show={true},
+  title={Letters on wave mechanics},
+  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
+  year={1967},
+  publisher={Vision}
+}
