fix more authors bug (#758)
* fix more authors bug

* fix

* add preview

Co-authored-by: Rohan Deb Sarkar <rohandebsarkar@gmail.com>

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@
   author={Einstein, Albert},
   year={1956},
   publisher={Courier Corporation,},
-  preview={brownian-motion.gif},
+  preview={brownian-motion.gif}
 }
 
 @article{einstein1950meaning,
@@ -77,5 +77,6 @@
   title={Letters on wave mechanics},
   author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
   year={1967},
-  publisher={Vision}
+  publisher={Vision},
+  preview={wave-mechanics.gif}
 }
