Completed initial revision of updated website

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,23 +10,27 @@
 @inproceedings{merlo2023wirelessly,
 	abbr = {IEEE IMS},
 	award = {SPC First Place},
+	selected = {true},
 	abstract = {Wirelessly coordinated distributed arrays will have a signiﬁcant impact in next generation communications and sensing systems in coming years. However, to achieve high modulation bandwidths and carrier frequencies, timing and frequency transfer must be synchronized to small fractions of the modulation and carrier periods respectively. In this work, we demonstrate coordination and beamforming of a wireless distributed antenna array at 1 GHz in a cluttered outdoor environment achieving a coherent gain of 95.4% and beamforming accuracy of 27.6 ps over a 41 m channel.},
 	author = {Jason M. {Merlo} and Anton {Schlegel} and Jeffrey A. {Nanzer}},
 	booktitle = {IEEE/MTT-S International Microwave Symposium (IMS)},
 	pdf = {ims23_distributed_time_frequency_transfer_and_beamforming_v1.1.pdf},
 	slides = {Tu2C_3_Merlo_Jason_finalslides_v2.pdf},
 	title = {High Accuracy Wireless Time-Frequency Transfer For Distributed Phased Array Beamforming},
+	month = {June},
 	year = {2023}}
 
 @inproceedings{merlo2023joint,
 	abbr = {IEEE RadarConf},
 	award = {Invited},
+	selected = {true},
 	abstract = {In this work we demonstrate an efﬁcient technique for the registration and compositing of multiple automotive synthetic aperture radar (SAR) images as a step towards distributed SAR imaging. Through the use of an efﬁcient sub-pixel Fourier-based iterative correlation and reﬁnement technique, sub-sections of the overall SAR images are aligned. Because only small sub-regions of the full SAR images are aligned at a time, this technique inherently compensates for accelerations experienced when sampling the synthetic aperture, by assuming a quasi-constant velocity over small sub-regions of the image. Because the image fusion is performed after image formation, this technique lends itself well to a distributed architecture where the image formation is performed on-vehicle and transferred to other vehicles or a centralized cloud processor where images from other vehicles can be aggregated. Finally, because the registration of sub-regions of the SAR images are performed, the registration alignment vector can be used as a odometry provider to improve vehicle odometry estimates; if a metrology grade SAR map is used as reference, a globally reference position estimate could be performed.},
 	author = {Jason M. {Merlo} and Jeffrey A. {Nanzer}},
 	booktitle = {IEEE Radar Conference (RadarConf)},
 	pdf = {radarconf_2023_multi_pass_sar_fusion.pdf},
 	slides = {radarconf_2023_multi_pass_sar_presentation.pdf},
 	title = {Multi-Pass Automotive Synthetic Aperture Radar Image Fusion},
+	month = {May},
 	year = {2023}}
 
 @article{bhattacharyya2023multiobjective,
@@ -44,6 +48,7 @@
 
 @article{merlo2022wireless,
 	abbr = {IEEE T-MTT},
+	selected = {true},
 	abstract = {Distributed antenna arrays have been proposed for many applications ranging from space-based observatories to automated vehicles. Achieving good performance in distributed antenna systems requires stringent synchronization at the wavelength and information level to ensure that the transmitted signals arrive coherently at the target, or that scattered and received signals can be appropriately processed via distributed algorithms. In this paper we address the challenge of high precision time synchronization to align the operations of elements in a distributed antenna array and to overcome time-varying bias between platforms due to oscillator drift. We use a spectrally sparse two-tone waveform, which obtains approximately optimal time estimation accuracy, in a two-way time transfer process. We also describe a technique for determining the true time delay using the ambiguous two-tone matched filter output, and we compare the time synchronization precision of the two-tone waveform with the more common linear frequency modulation (LFM) waveform. We experimentally demonstrate wireless time synchronization using a single pulse 40MHz two-tone waveform over a 90cm 5.8GHz wireless link in a laboratory setting, obtaining a timing precision of 2.26ps.},
 	archiveprefix = {arXiv},
 	arxiv = {2206.08457},
@@ -93,6 +98,7 @@
 
 @article{merlo2021sar,
 	abbr = {IEEE TVT},
+	selected = {true},
 	abstract = {Due to the rapid increase in 76 GHz automotive spectrum use in recent years, wireless interference is becoming a legitimate area of concern. However, the recent rise in interest of automated vehicles (AVs) has also spurred new growth and adoption of low frequency vehicle-to-everything (V2X) communications in and around the 5.8 GHz unlicensed bands, opening the possibility for communications spectrum reuse in the form of joint radar-communications (JRC). In this work, we present a low frequency 5.9 GHz side-looking polarimetric synthetic aperture radar (SAR) for automotive use, utilizing a ranging waveform in a common low frequency V2X communications band. A synthetic aperture technique is employed to address the angular resolution concerns commonly associated with radars at lower frequencies. Three side-looking fully polarimetric SAR images in various urban scenes are presented and discussed to highlight the unique opportunities for landmark inference afforded through measurement of co- and cross-polarized scattering.},
 	archiveprefix = {arXiv},
 	arxiv = {2110.14114},
@@ -200,6 +206,7 @@
 @inproceedings{merlo2020fmcw,
 	abbr = {IEEE AP-S SDC},
 	award = {SDC Second Place},
+	selected = {true},
 	abstract = {The design of a portable frequency-modulated continuous-wave (FMCW) radar system for detecting and localizing drones is discussed in this report. The system utilized the 5.8 GHz industrial, scientific and medical band and occupied a 100 MHz bandwidth. The system is able to localize drones at a range of 10 m or more. The theory behind FMCW radar localization is explained, and an algorithm for detecting the drone response is presented. The design considerations of a radar board and transmit and receive patch antenna arrays are discussed. We include experimental measurements of tracking a drone.},
 	author = {Jason M. {Merlo} and Stavros {Vakalis} and Cory {Hilton} and Jacob {Randall}},
 	booktitle = {IEEE International Symposium on Antennas and Propagation Student Design Competition},
