Added IEEE link for RadarConf '23 papper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,6 +28,7 @@
 	author = {Jason M. {Merlo} and Jeffrey A. {Nanzer}},
 	booktitle = {IEEE Radar Conference (RadarConf)},
 	pdf = {radarconf_2023_multi_pass_sar_fusion.pdf},
+	ieee = {https://doi.org/10.1109/RadarConf2351548.2023.10149757},
 	slides = {radarconf_2023_multi_pass_sar_presentation.pdf},
 	title = {Multi-Pass Automotive Synthetic Aperture Radar Image Fusion},
 	month = {May},
