Added RadarConf IEEE url; Added TAP paper; Fixed name underline in bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,6 +20,20 @@
 	month = {June},
 	year = {2023}}
 
+@ARTICLE{arisheh2023tap,
+  abbr={IEEE TAP},
+  abstract={We introduce a new technique for secure wireless applications using a single dynamic antenna. The dynamic antenna supports a constantly and rapidly changing current distribution that generates a radiation pattern that is static in a desired direction and dynamic elsewhere. This imparts additional modulation on the signal and obscures information transmitted or received outside of the information beam, thus achieving directional modulation. Dynamic currents are supported by a single feed that is switched between separate ports on a single antenna, generating two different radiation patterns without changing the physical shape of the antenna. We introduce the theoretical concept by exploring an ideal complex dynamic radiation pattern that remains static in a narrow desired direction and is dynamic elsewhere. The impact on the transmission of information is analyzed, showing that the information beam narrows as the modulation order increases, and design constraints on the spatial width of the information beam as a function of modulation format are determined. We design and analyze a 2.3 GHz two-state dynamic dipole antenna and experimentally demonstrate secure wireless transmission. We demonstrate the ability to change the information beamwidth and steer the information beam experimentally in real time, and to maintain high throughput in the information beam while obscuring the information elsewhere. In contrast to multiport or array-based antennas, our approach introduces a novel rapidly switched single-element technique for secure wireless applications that can be used independently from the rest of the wireless system, essentially operating as a “black box” for an additional layer of security.},
+  author={Arisheh, Amer Abu and Merlo, Jason M. and Nanzer, Jeffrey A.},
+  journal={IEEE Transactions on Antennas and Propagation}, 
+  title={Design of a Single-Element Dynamic Antenna for Secure Wireless Applications}, 
+  year={2023},
+  ieee={https://doi.org/10.1109/TAP.2023.3288013},
+  volume={},
+  number={},
+  pages={1-1},
+  doi={10.1109/TAP.2023.3288013}}
+
+
 @inproceedings{merlo2023joint,
 	abbr = {IEEE RadarConf},
 	award = {Invited},
