Added MWTL paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,18 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{schlegel2023coherent,
+  abbr={IEEE MWTL},
+  abstract={We present a distributed microwave radar system operating at 4.8 GHz that uses wireless frequency transfer and internode ranging. We implement wireless frequency alignment (syntonization) using a sparse two-tone signal transmitted from the primary node and a self-mixing receiver on the secondary node. The primary node acts as a distributed radar transmitter, sending a linear frequency-modulated (LFM) waveform downrange, toward the target. There is also a repeater that retransmits an LFM from the secondary node that is used to estimate the separation of the node to correct for the phase rotation of the frequency signal due to propagation. The secondary node also locks its oscillator to the primary node and captures the signal reflected from the scene. We demonstrate the ability of the fully wireless distributed radar system to perform bistatic ranging in an outdoor environment at 4.8 GHz using software-defined radios (SDRs). Measurements to a wall yielded a maximum standard deviation of 1.7 cm and a maximum bias of 14.9 cm.},
+  author={Schlegel, Anton and Merlo, Jason M. and Nanzer, Jeffrey A.},
+  journal={IEEE Microwave and Wireless Technology Letters}, 
+  title={Coherent Distributed Bistatic Radar Using Wireless Frequency Syntonization and Internode Ranging}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={1-4},
+  ieee={10.1109/LMWT.2023.3283918}}
+
 
 @inproceedings{merlo2023wirelessly,
 	abbr = {IEEE IMS},
