Updated files from URSI GASS

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,19 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@inproceedings{merlo2023ursigass,
+	award = {Young Scientist Award},
+	abbr = {URSI GASS},
+	selected = {true},
+	abstract = {Picosecond-level timing synchronization with wireless frequency transfer is presented in a non-line-of-sight (NLoS) environment using two software-defined radios (SDRs). Using a spectrally sparse pulsed two-tone waveform, high accuracy timing synchronization is achieved. Frequency synchronization is achieved via a continuous 10 MHz two- tone waveform transmitted between nodes which is demodulated by a self-mixing circuit to recover the 10 MHz reference signal used to discipline the local oscillator on the receiving SDR. Total time synchronization, beamforming, and phase accuracies of 8.84 ps, 23.17 ps, and 10°, respectively, were achieved enabling modulation bandwidths of up to 4.3 Gb/s at a carrier frequency of up to 1.33 GHz.},
+	author = {Jason M. {Merlo} and Jeffrey A. {Nanzer}},
+	booktitle = {International Union of Radio Scientists General Assembly},
+	month = {August},
+	pdf = {YSASummaryMerloJason.pdf},
+	slides = {C03-4_1020_Merlo.pdf},
+	title = {Picosecond Non-Line-of-Sight Wireless Time and Frequency Synchronization for Coherent Distributed Aperture Antenna Arrays},
+	year = {2023}}
+
 @inproceedings{merlo2023aps,
 	award = {SPC Honorable Mention},
 	abbr = {IEEE AP-S/URSI},
