Added AWPL paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,6 +19,20 @@
 	title = {Picosecond Non-Line-of-Sight Wireless Time and Frequency Synchronization for Coherent Distributed Aperture Antenna Arrays},
 	year = {2023}}
 
+@ARTICLE{randall2023awpl,
+  abbr={IEEE AWPL},
+  abstract={A new method of obtaining directional modulation by implementing antenna array dynamics is proposed. An asymmetric switching feed structure is implemented in a two-element array that supports a static antenna pattern in a desired direction while adding sufficient complex modulation at other angles to mitigate the transfer of information. The dynamic antenna array feeds are calibrated to be in-phase and have a signal feed amplitude ratio of approximately 6.15±0.1 dB through the design of an asymmetrical Wilkinson divider. The antenna system comprises of a two-state switching matrix using a double pole double throw (DPDT) RF switch. Secure communication capability is demonstrated in simulation and experiment by a 2.5 GHz two-element patch array. The communication system uses a 16-QAM single-carrier signal transmitting 48 kbits in a pseudo-random bit sequence (PRBS) at a rate of 4 Mbits/s. The DPDT switch was synchronized to the transmitter symbol rate of 1 MHz. To isolate the effects of the phase dynamics, the communication system was operating at an SNR of 33 dB, thus transmitting high power to all directions. A low bit error ratio (BER) of <10^−3 is demonstrated at the desired transmission direction 13, with higher BER outside this region. A measurement of a static antenna yielded BER =0 in all directions; thus, the bit errors and narrow 13 information beamwidth were due exclusively to the antenna array dynamics. Performance metrics of this directional modulation technique are compared against previous literature for the reader. Further insights to spurious signals and mitigation are taken into consideration for the equipment and instrumentation of a narrowband signal to validate the technique as a viable “black-box” system implementation.},
+  author={Randall, Jacob R. and Arisheh, Amer Abu and Merlo, Jason M. and Nanzer, Jeffrey A.},
+  journal={IEEE Antennas and Wireless Propagation Letters}, 
+  title={A Dynamic Array Using Spatial Amplitude Modulation with an Asymmetric Wilkinson Power Divider for Secure Wireless Applications}, 
+  year={2023},
+  month={August},
+  volume={},
+  number={},
+  pages={1-5},
+  ieee={https://doi.org/10.1109/LAWP.2023.3310911},
+  doi={10.1109/LAWP.2023.3310911}}
+
 @inproceedings{merlo2023aps,
 	award = {SPC Honorable Mention},
 	abbr = {IEEE AP-S/URSI},
